HOTFIX: Fix button overlapping to navigation and login scroll issue

--- a/public/modules/core/less/_core.main-content.less
+++ b/public/modules/core/less/_core.main-content.less
@@ -10,6 +10,9 @@
   //overflow: hidden;
 
   &--collapsed {
+    .header-nav-element-tab-holder {
+      left: 68px;
+    }
 
     .sidebar {
       top: 0;
